--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,33 @@
 <h1>The Odin Porject Re-Former</h1>
+<%# <form accept-charset="UTF-8" action="/users" method="post">
+  <label for="uname">User Name:</label>
+  <input type="text" name="authenticity_token" id="uname" name="name[uname]"><br><br>
+  <label for="email">Email:</label>
+  <input type="text" id="email" name="user[email]"><br><br>
+  <label for="password">Password:</label>
+  <input type="text" id="password" name="user[password]"><br><br>
+  <input type="submit" value="Submit">
+</form> %>
+
+<%#= form_tag("/users", method: "post") do %>
+  <%#= label_tag(:username, "Username") %><br>
+  <%#= text_field_tag(:username) %><br>
+  <br>
+  <%#= label_tag(:email, "Email") %><br>
+  <%#= email_field(:email, :address)%><br>
+  <br>
+  <%#= label_tag(:password, "Password") %><br>
+  <%#= password_field_tag(:password) %><br>
+  <br>
+  <%#= submit_tag ("Submit") %>
+<%# end %>
+
+  <%= form_with model: @user do |form| %>
+    <%= form.label :username, "Username" %>
+    <%= form.text_field :username %><br><br>
+    <%= form.label :email, "Email" %>
+    <%= form.email_field :email %><br><br>
+    <%= form.label :password, "Password" %>
+    <%= form.password_field :password %><br><br>
+    <%= form.submit %>
+  <% end %>
